--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
 	display: block;
 	margin: 0px;
-    overflow:hidden;
+    overflow: visible;
 }
 
 
@@ -18,6 +18,7 @@ body{
 div{
 	display: block;
 }
+
 .container{
     margin-left: 700px;
     margin-top: 100px;
@@ -61,4 +62,9 @@ div{
     display: inline-block;
     font-size:32px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.audio{
+    background-color: transparent;
+    border: none;
 }
